Обновление главной страницы

--- a/index.html
+++ b/index.html
@@ -446,10 +446,12 @@
 
 
 <h1 id="masonite">Введение и установка masonite</h1>
-<p>Документация Masonite на русском языке.</p>
+<p>Документация <strong>Masonite</strong> на русском языке.</p>
 <p><a href="https://www.mkdocs.org">Официальная документация на английском</a>.</p>
+<div class="admonition note success">
+<p class="admonition-title">Masonite - python веб фреймворк.</p>
 <p>Прекратите использовать старые фреймворки с запутанным функционалом. </p>
-<p>Masonite - python веб фреймворк.</p>
+</div>
 <p>Masonite — это инструмент разработки, ориентированный на разработчиков, со всеми функциями, 
 необходимыми для быстрой разработки. Masonite идеально подходит для начинающих, разрабатывающих 
 своё первое веб-приложение, или для опытных разработчиков и компаний, которым необходимо использовать 
