--- a/basics/controllers/index.html
+++ b/basics/controllers/index.html
@@ -649,7 +649,7 @@
 </code></pre></div></p>
 <hr />
 <h2 id="_6">Расположение контроллеров</h2>
-<p>Masonite сможет найти контроллеры (если вы наследуйте класс Controller), 
+<p>Masonite сможет найти контроллеры (если вы наследуете класс Controller), 
 используя привязку строк в месте регистрации контроллеров.
 Расположение зарегистрированных контроллеров по умолчанию <code>app/controllers</code> определено в файле конфигурации 
 проекта <code>Kernel.py</code>:
