--- a/examples/todo/task/index.html
+++ b/examples/todo/task/index.html
@@ -1770,7 +1770,7 @@
 попробуйте отредактировать или удалить задачу.</p>
 <h2 id="_13">Итог</h2>
 <p>В данном руководстве вы познакомились с базовыми функциями фреймворка Masonite.</p>
-<p>Полный код проекта можно найти на <a href="">GitHub</a></p>
+<p>Полный код проекта можно найти на <a href="https://github.com/DJWOMS/masonite-todo">GitHub</a></p>
 
 
 
