--- a/feature/scheduling/index.html
+++ b/feature/scheduling/index.html
@@ -922,7 +922,7 @@
 
 <h1 id="masonite">Планировщик задач в Masonite</h1>
 <p>Masonite имеет невероятно простой способ запуска задач по расписанию. 
-Задачи могут такими, как очистка записей в таблице базы данных каждую минуту, 
+Задачи могут быть такими, как очистка записей в таблице базы данных каждую минуту, 
 синхронизация записей между базами данных или отправка счетов в конце месяца. </p>
 <p>Это автоматизированные повторяющиеся задачи, которые необходимо запускать по расписанию, например, 
 каждую минуту, каждый час, каждый день, каждый месяц.</p>
